# python-threadsafe-serial

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: coverage-report.yml  python-app.yml  release.yml
src/threadsafe_serial/: __init__.py  packet_reader.py  threadsafe_serial.py
tests/: conftest.py  test_packet_reader.py  test_stress.py  test_threadsafe_serial.py  test_truncate_data.py  test_write_latest.py
